# comfygit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publish-cli.yml  publish-core.yml  publish-docs.yml
dev/: docker-compose.yml
dev/scripts/: check-versions.py  dev-cec.sh
docs/: DIRECTORY_RENAME_COMPLETE.md  MIGRATION_TO_HUB_COMPLETE.md
docs/comfydock-docs/: mkdocs.yml
docs/comfydock-docs/docs/: index.md
docs/comfydock-docs/docs/cli-reference/: environment-commands.md  global-commands.md  node-commands.md  shell-completion.md  workflow-commands.md
docs/comfydock-docs/docs/getting-started/: concepts.md  installation.md  migrating-from-v0.md  quickstart.md
docs/comfydock-docs/docs/troubleshooting/: common-issues.md
docs/comfydock-docs/docs/user-guide/: workspaces.md
docs/comfydock-docs/docs/user-guide/collaboration/: export-import.md  git-remotes.md  team-workflows.md
docs/comfydock-docs/docs/user-guide/custom-nodes/: adding-nodes.md  managing-nodes.md  node-conflicts.md
docs/comfydock-docs/docs/user-guide/models/: adding-sources.md  (+3 more)
docs/comfygit-docs/: Makefile  README.md  mkdocs.yml  pyproject.toml
docs/comfygit-docs/docs/cli-reference/: environment-commands.md  global-commands.md  node-commands.md  shell-completion.md  workflow-commands.md
docs/comfygit-docs/docs/getting-started/: concepts.md  installation.md  migrating-from-v0.md
docs/comfygit-docs/docs/user-guide/: workspaces.md
docs/comfygit-docs/docs/user-guide/collaboration/: export-import.md  git-remotes.md
docs/comfygit-docs/docs/user-guide/custom-nodes/: adding-nodes.md  managing-nodes.md
docs/comfygit-docs/docs/user-guide/environments/: creating-environments.md  running-comfyui.md  version-control.md
docs/comfygit-docs/docs/user-guide/models/: downloading-models.md  managing-models.md  model-index.md
docs/comfygit-docs/docs/user-guide/python-dependencies/: constraints.md
docs/comfygit-docs/docs/user-guide/workflows/: workflow-resolution.md  workflow-tracking.md
docs/comfygit-docs/scripts/: README.md  generate_cli_reference.py
docs/hub-infrastructure/: SETUP_INSTRUCTIONS.md
(+8 files in other folders)
