# pyproject.toml - Root workspace configuration
# Note: No [project] section - this is a workspace root, not a package

[tool.uv]
# Shared development dependencies
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.0",
    "mypy>=1.10.0",
]

[tool.uv.workspace]
# Define workspace members
members = [
    "packages/core",
    "packages/cli",
]

# Package index configuration (moved out of workspace section)
[[tool.uv.index]]
url = "https://pypi.org/simple"
name = "pypi"
# Optionally set as default index
# default = true

[tool.ruff]
# Shared ruff configuration for all packages
line-length = 100
target-version = "py310"
extend-include = ["*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
# Shared pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
# Shared mypy configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Optional: Add build system if you want to package the workspace root
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"