[project]
name = "comfygit-docs"
version = "0.1.0"
description = "ComfyGit documentation site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.6",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-argparse>=0.0.1",
]
